--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@ body {
 h1 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #2e2e2e;
+  text-decoration: underline;
 }
 
 h4 {
@@ -15,12 +16,15 @@ h4 {
 }
 
 textarea {
-  width: 200px;
+  width: 300px;
   height: 300px;
 }
 
-.portfolio-container {
- height: 100%;
- height: 100vh;
- position: absolute;
+.form-email {
+  width: 350px;
+}
+
+ul {
+  display: grid;
+  font-size: larger;
 }
